refactor: move suggestions into FailedBlock.commentary